* Fixes issue with Nordnet (thanks to jonasgroth).
* Fixes crash when account is not available from widget.
* Fixes transactions for Forex Bank (thanks to jonasgroth).
* Fixes transaction issues for EspressoHouse.
* Fixes Payson balance. NOTE: Transactions not supported yet (thanks to robho).
* Fixes LockPattern crashes for Samsung Galaxy devices.
v1.9.8.0 (2015-02-27)
* Adds support for Bredband2's VoIP service (thanks to fredrike)
* Adds support for EspressoHouse (thanks to fredrike)
* Adds support for multiple travel cards for JoJo Reskassa
* Sets subaccounts for Avanza to hidden by default (thanks to fredrike)
* Order transactions by descending date
* Fixes www login for Blekingetrafiken (thanks to fredrike)
* Fixes www login for Avanza (thanks to fredrike)
* Fixes date formatting for VolvoFinans
* Fixes application crash for Coop.
* Fixes application crash when setting LockPattern on some devices
* Fixes support for Nordea accounts with number in the account name
* Fixes Swedbank and Sparbankerna if you have corporate credit card
* Fixes www login for Coop
* Fixes application crash if SonyEricsson's LiveView integration is enabled 
* Fixes application crash if screen is rotated during a bank update
* Improved error handling
* Disabled www-button for Swedbank and Sparbankerna
* Updated certificate for Östgötatrafiken, AmericanExpress, Brummer KF
* Removes support for Handelsbanken, SEB, Chevrolet, Djurgarden, EurobonusMastercard, EurobonusMastercardDk, EurobonusMastercardNo, Eurocard, Opel, Quintessentially, SJPrio, Saab, Statoil, Wallet because they now requires BankId.

v1.9.7.4: (2015-02-21)
* Updated certificates for ICA Banken, Västtrafik, Brummer KF, Diners Club, Ikano Bank, Marginalen, Trustbuddy, Zidisha, AmericanExpress, TicketRikskortet
* Adds support for Coop's MedMera-Före and MedMera-Efter (thanks to fredrike)
* Adds support for Blekingetrafiken (thanks to fredrike)
* Adds support for Östgötatrafiken (thanks to robho)